--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -131,3 +131,8 @@
     ></router-outlet>
   </div>
 </div>
+
+<!-- チャットボタン -->
+<div class="over-three right-buttom">
+  <app-chat></app-chat>
+</div>
