Vdd の答えが一致した

--- a/src/app/calculation/result-safety-shear-force/result-safety-shear-force.component.html
+++ b/src/app/calculation/result-safety-shear-force/result-safety-shear-force.component.html
@@ -414,7 +414,7 @@
         </ng-container>
       </tr>
       <tr>
-        <th colspan="2" class="cell_name1">βaf (a/d)</th>
+        <th colspan="2" class="cell_name1">βa (a/d)</th>
         <ng-container *ngFor="let column of pages.columns; index as c">
           <td colspan="2" class="{{column.Ba.alien}} g-left2">{{column.Ba.value}}</td>
         </ng-container>
