最大鉄筋量の照査における圧縮鉄筋応力度について修正した

--- a/src/app/calculation/result-minimum-reinforcement/result-minimum-reinforcement.component.html
+++ b/src/app/calculation/result-minimum-reinforcement/result-minimum-reinforcement.component.html
@@ -590,7 +590,7 @@
           </ng-container>
         </tr>
         <tr>
-          <th colspan="2" class="cell_name1 g-bottom2">p<sub>c</sub> = A<sub>st</sub>/(b・h) (%)</th>
+          <th colspan="2" class="cell_name1 g-bottom2">p<sub>c</sub> = A<sub>st</sub>/(b・d) (%)</th>
           <ng-container *ngFor="let column of pages.columns; index as c">
             <td colspan="2" class="{{column.pc.alien}} g-bottom2 g-left2">
             {{column.pc.value}}</td>
