--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -8,17 +8,17 @@
           </a>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
             <button ngbDropdownItem (click)="renew()"translate>menu.newEntry</button>
-            <ng-container  *ngIf="!electronService.isElectronApp">
+            <ng-container  *ngIf="!electronService.isElectron">
               <label style="width: 100%; margin: 0px">
                 <span ngbDropdownItem translate>menu.openFile
                   <input type="file" accept="application/text" (change)="open($event)" style="display: none" />
                 </span>
               </label>
             </ng-container>
-            <button *ngIf="electronService.isElectronApp" ngbDropdownItem (click)="open_electron()"translate>menu.openFile
+            <button *ngIf="electronService.isElectron" ngbDropdownItem (click)="open_electron()"translate>menu.openFile
             </button>
             <button ngbDropdownItem (click)="fileSave()"translate>menu.saveFile</button>
-            <button *ngIf="electronService.isElectronApp" ngbDropdownItem (click)="overWrite()"translate>menu.overwrite
+            <button *ngIf="electronService.isElectron" ngbDropdownItem (click)="overWrite()"translate>menu.overwrite
             </button>
             <label style="width: 100%; margin: 0px">
               <span ngbDropdownItem translate>menu.openPick
