select file type in html and catch deliberately select(All file) give a message if deliberately choose another file type

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
             </button>
             <label style="width: 100%; margin: 0px">
               <span ngbDropdownItem translate>menu.openPick
-                <input type="file" accept="application/text" (change)="pickup($event)" style="display: none" />
+                <input type="file" accept="application/text" (change)="pickup($event)" style="display: none" accept=".pik, .csv"/>
               </span>
             </label>
           </div>
