--- a/src/app/components/calculation-print/calculation-print.component.html
+++ b/src/app/components/calculation-print/calculation-print.component.html
@@ -113,7 +113,7 @@
   <button (click)="previewSummary()" translate>calculation-print.summary</button>
 </div>
 
-<div class="button-container" *ngIf="hasSummary">
+<div class="button-container">
   <button (click)="downloadSummary()" translate>calculation-print.download</button>
 </div>
 
