--- a/src/app/components/calculation-print/calculation-print.component.html
+++ b/src/app/components/calculation-print/calculation-print.component.html
@@ -104,7 +104,7 @@
 </div>
 
 <div class="button-container">
-  <button (click)="onClick()" id="printButton">
+  <button (click)="pdfSummary()" id="printButton">
     <p translate>calculation-print.print</p>
   </button>
 </div>
