--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -17,7 +17,7 @@
             </ng-container>
             <button *ngIf="electronService.isElectron" ngbDropdownItem (click)="open_electron()"translate>menu.openFile
             </button>
-            <button ngbDropdownItem (click)="fileSave()"translate>menu.saveFile</button>
+            <button class="save-file" [class.active-save]="user.userProfile" ngbDropdownItem (click)="fileSave()"translate>menu.saveFile</button>
             <button *ngIf="electronService.isElectron" ngbDropdownItem (click)="overWrite()"translate>menu.overwrite
             </button>
             <label style="width: 100%; margin: 0px">
