fix download summary no data

--- a/src/app/components/calculation-print/calculation-print.component.html
+++ b/src/app/components/calculation-print/calculation-print.component.html
@@ -109,12 +109,12 @@
   </button>
 </div>
 
-<div class="button-container" *ngIf="hasSummary">
+<!-- <div class="button-container">
   <button (click)="previewSummary()" translate>calculation-print.summary</button>
-</div>
+</div> -->
 
 <div class="button-container">
-  <button (click)="downloadSummary()" translate>calculation-print.download</button>
+  <button (click)="downloadSummaryFun4()" translate>calculation-print.download</button>
 </div>
 
 <div id="print-loading" disabled="true" style="display: none;">
