--- a/src/app/components/calculation-print/calculation-print.component.html
+++ b/src/app/components/calculation-print/calculation-print.component.html
@@ -28,7 +28,18 @@
           <p translate>calculation-print.p_check</p>
         </label>
       </div>
-
+      <div>
+        <label>
+          <input
+            type="checkbox"
+            name="print_safety_ratio"
+            id="print_safety_ratio"
+            [(ngModel)]="print_safety_ratio_checked"
+            [checked]="print_safety_ratio_checked"
+          />
+          <p translate>calculation-print.safety_ratio</p>
+        </label>
+      </div>
     </fieldset>
   </div>
   <div class="calculate-item">
@@ -80,20 +91,21 @@
 <div class="table-container">
   <fieldset>
     <legend translate>calculation-print.member</legend>
-    <div class="hot" >
+    <div class="hot">
       <table>
         <tbody>
           <ng-container *ngFor="let item of table_datas; index as j">
             <tr>
               <td width="70px">
-                <input type="checkbox" 
-                [value]="item.calc_checked" 
-                [(ngModel)]="item.calc_checked"
-                [checked]="item.calc_checked" 
-              />
+                <input
+                  type="checkbox"
+                  [value]="item.calc_checked"
+                  [(ngModel)]="item.calc_checked"
+                  [checked]="item.calc_checked"
+                />
               </td>
               <td width="250px">
-                {{item.g_name}}
+                {{ item.g_name }}
               </td>
             </tr>
           </ng-container>
@@ -114,10 +126,12 @@
 </div> -->
 
 <div class="button-container">
-  <button (click)="downloadSummaryFun4()" id="downloadButton" translate>calculation-print.download</button>
+  <button (click)="downloadSummaryFun4()" id="downloadButton" translate>
+    calculation-print.download
+  </button>
 </div>
 
-<div id="print-loading" disabled="true" style="display: none;">
+<div id="print-loading" disabled="true" style="display: none">
   <svg
     width="50px"
     height="50px"
@@ -125,15 +139,8 @@
     viewBox="0 0 100 100"
     preserveAspectRatio="xMidYMid"
     class="uil-spin"
-    >
-    <rect
-      x="0"
-      y="0"
-      width="100"
-      height="100"
-      fill="none"
-      class="bk"
-      ></rect>
+  >
+    <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
     <g transform="translate(50 50)">
       <g transform="rotate(0) translate(34 0)">
         <circle cx="0" cy="0" r="8" fill="#000">
@@ -144,7 +151,7 @@
             begin="0s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -153,7 +160,7 @@
             begin="0s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(45) translate(34 0)">
@@ -165,7 +172,7 @@
             begin="0.12s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -174,7 +181,7 @@
             begin="0.12s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(90) translate(34 0)">
@@ -186,7 +193,7 @@
             begin="0.25s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -195,7 +202,7 @@
             begin="0.25s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(135) translate(34 0)">
@@ -207,7 +214,7 @@
             begin="0.37s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -216,7 +223,7 @@
             begin="0.37s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(180) translate(34 0)">
@@ -228,7 +235,7 @@
             begin="0.5s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -237,7 +244,7 @@
             begin="0.5s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(225) translate(34 0)">
@@ -249,7 +256,7 @@
             begin="0.62s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -258,7 +265,7 @@
             begin="0.62s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(270) translate(34 0)">
@@ -270,7 +277,7 @@
             begin="0.75s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -279,7 +286,7 @@
             begin="0.75s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(315) translate(34 0)">
@@ -291,7 +298,7 @@
             begin="0.87s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -300,7 +307,7 @@
             begin="0.87s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
     </g>
@@ -308,7 +315,7 @@
   <p translate>calculation-print.preparing</p>
 </div>
 
-<div id="download-loading" disabled="true" style="display: none;">
+<div id="download-loading" disabled="true" style="display: none">
   <svg
     width="50px"
     height="50px"
@@ -316,15 +323,8 @@
     viewBox="0 0 100 100"
     preserveAspectRatio="xMidYMid"
     class="uil-spin"
-    >
-    <rect
-      x="0"
-      y="0"
-      width="100"
-      height="100"
-      fill="none"
-      class="bk"
-      ></rect>
+  >
+    <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
     <g transform="translate(50 50)">
       <g transform="rotate(0) translate(34 0)">
         <circle cx="0" cy="0" r="8" fill="#000">
@@ -335,7 +335,7 @@
             begin="0s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -344,7 +344,7 @@
             begin="0s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(45) translate(34 0)">
@@ -356,7 +356,7 @@
             begin="0.12s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -365,7 +365,7 @@
             begin="0.12s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(90) translate(34 0)">
@@ -377,7 +377,7 @@
             begin="0.25s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -386,7 +386,7 @@
             begin="0.25s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(135) translate(34 0)">
@@ -398,7 +398,7 @@
             begin="0.37s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -407,7 +407,7 @@
             begin="0.37s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(180) translate(34 0)">
@@ -419,7 +419,7 @@
             begin="0.5s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -428,7 +428,7 @@
             begin="0.5s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(225) translate(34 0)">
@@ -440,7 +440,7 @@
             begin="0.62s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -449,7 +449,7 @@
             begin="0.62s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(270) translate(34 0)">
@@ -461,7 +461,7 @@
             begin="0.75s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -470,7 +470,7 @@
             begin="0.75s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
       <g transform="rotate(315) translate(34 0)">
@@ -482,7 +482,7 @@
             begin="0.87s"
             dur="1s"
             repeatCount="indefinite"
-            ></animate>
+          ></animate>
           <animateTransform
             attributeName="transform"
             type="scale"
@@ -491,7 +491,7 @@
             begin="0.87s"
             dur="1s"
             repeatCount="indefinite"
-            ></animateTransform>
+          ></animateTransform>
         </circle>
       </g>
     </g>
