--- a/src/app/components/calculation-print/calculation-print.component.scss
+++ b/src/app/components/calculation-print/calculation-print.component.scss
@@ -1,6 +1,6 @@
 .condition-container {
     display: grid;
-    grid-column: 2;
+    grid-column: 3;
     grid-template-columns: 250px 150px;
 }
 
@@ -8,7 +8,11 @@
     margin: 15px;
     grid-column: 1 / 2;
 }
-
+.print-item-1{
+    margin: 15px;
+    grid-column: 3 / 3;
+    width: fit-content;
+}
 .calculate-item { 
     margin: 15px;
     grid-column: 2 / 2;
