ログアウトの処理から firebase を削除

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -62,7 +62,7 @@
           <a class="icon file" id="dropdownBasic1" class="menu-btn" ngbDropdownToggle onfocus="this.blur();"><i
               class="far fa-user-circle"></i>{{ user.lastName + user.firstName }}</a>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <a (click)="auth.signOut()" (click)="logOut()" class="menu-btn logOut"translate>menu.logout</a>
+            <a (click)="logOut()" class="menu-btn logOut"translate>menu.logout</a>
           </div>
         </div>
       </div>
