--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,11 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 ngb-modal-backdrop{
