--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,16 +1,17 @@
 $primary: #39b54a;
 $base_dark: #1e252c;
 $base_dim: #333d46;
+$base_bg: #333d46;
 
 $text_dark: #222222;
 $text_disabled_dark: #888888;
 $text_light: #ffffff;
 
 $table_dark_border: #63676c;
-$table_dark_row_even_bg: #4a4c50;
-$table_dark_row_odd_bg: #56585c;
-$table_dark_empty_bg: #54585e;
-$table_dark_disabled_bg: #33363c;
+$table_dark_row_even_bg: #424c55;
+$table_dark_row_odd_bg: #373e45;
+$table_dark_empty_bg: #424c55;
+$table_dark_disabled_bg: #373e45;
 
 $menu_bg_dark: #333333;
 $disabled_dark: #535353;
@@ -20,13 +21,13 @@ $sepalater_dark: #888888;
     --primary: #{$primary};
     --base: #{$base_dark};
     --base_dim: #{$base_dim};
+    --base_bg: #{$base_bg};
     --text_main: #{$text_light};
     --text_sub: #{$text_dark};
     --text_disabled: #{$text_disabled_dark};
     --table_border: #{$table_dark_border};
     --table_row_even_bg: #{$table_dark_row_even_bg};
     --table_row_odd_bg: #{$table_dark_row_odd_bg};
-    --table_empty_bg: #{$table_dark_empty_bg};
     --table_empty_bg: #{$table_dark_empty_bg};
     --table_disabled_bg: #{$table_dark_disabled_bg};
     --menu_bg: #{$menu_bg_dark};
