部材・断面のタブを作成

--- a/src/app/components/sheet/sheet.component.html
+++ b/src/app/components/sheet/sheet.component.html
@@ -1,3 +1,46 @@
 <div class="datasheet">
-    <div #pqgrid ></div>
+  <div #pqgrid></div>
+  <div
+    id="member-table"
+    [ngStyle]="{ display: isMemberQuestionActive ? 'block' : 'none' }"
+  >
+    <div class="container">
+      <table>
+        <thead>
+          <tr>
+            <th width="54px">
+              <p translate>members.No</p>
+            </th>
+            <th width="85px">
+              <p translate>members.structure</p>
+            </th>
+            <th width="77px">
+              <p translate>members.shape</p>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td rowspan="2">RC, SRC</td>
+            <td translate>members.rectangle</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td translate>members.t_shape</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>RC, CFT</td>
+            <td translate>members.r_shape</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>RC</td>
+            <td translate>members.oval</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
