断面力を実装

--- a/src/app/components/section-forces/section-forces.component.html
+++ b/src/app/components/section-forces/section-forces.component.html
@@ -23,7 +23,7 @@
   <div class="slider-section">
     <div
       class="slider-container"
-      *ngFor="let group of bendingColGroupKeys"
+      *ngFor="let group of currentColGroupKeys"
       (click)="toggleDataLoad(group)"
       [ngClass]="{ active: toggleStatus[group] }"
     >
