表の背景色がグレーになっていた問題を修正

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,7 @@
 $primary: #39b54a;
 $primary-800: #0a713c;
 $primary-500: #09de6d;
-$base_dark: #1e252c;
+$base_dark: #070f17;
 $base_dark_950: #1e252c;
 $base_dark_900: #333d46;
 $base_dark_700: #3f515f;
