--- a/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.scss
+++ b/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.scss
@@ -8,28 +8,43 @@ fieldset {
   padding-right: 15px;
 }
 
-h4 {
-  text-decoration: underline; /*下線を引く*/
+h5 {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--text_main);
 }
 
 
 .tabContent{
-  margin: 15px;
+  padding: 15px;
+  background: var(--base-900);
+
+  .tab-inner {
+    padding-top: 16px;
+  }
+  .item-container{
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+    
+    &.hidden {
+      display: none;
+    }
+  }
 }
 
 .safety-factors, .material-strength {
   display: inline-block;
-  margin-top: 15px;
-  margin-left: 15px;
-  margin-bottom: 15px;
-
+  // margin-top: 15px;
+  // margin-left: 15px;
+  // margin-bottom: 15px;
 }
 
 .pile-factors {
   display: inline-block;
-  margin-top: 15px;
-  margin-left: 15px;
-  margin-bottom: 15px;
+  // margin-top: 15px;
+  // margin-left: 15px;
+  // margin-bottom: 15px;
   
   table{
     margin: 15px;
@@ -57,16 +72,52 @@ h4 {
 }
 
 .concrete-strength {
-  margin-top: 30px;
+  // margin-top: 30px;
 }
 
 .table-container {
   float: left;
-  margin-bottom: 15px;
+  // margin-bottom: 15px;
 }
 
 .range-fieldset {
   float: right;
-  margin-left: 15px;
+  // margin-left: 15px;
 }
 
+.tab-select {
+  &-items {
+    display: flex;
+    list-style: none;
+    column-gap: 2px;
+    padding: 0;
+    margin: 0;
+  }
+
+  &-item {
+    color: var(--text_main);
+    font-size: 12px;
+    padding: 8px 16px;
+    background: var(--base-700);
+    cursor: pointer;
+
+    &:first-child {
+      border-radius: 4px 0 0 4px;
+    }
+    &:last-child {
+      border-radius: 0 4px 4px 0;
+    }
+    &.is-active {
+      color: var(--primary);
+      background: var(--base-950);
+    }
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.sectionTitle {
+  color: #fff;
+}
