--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -25,6 +25,7 @@
                 <input type="file" accept="application/text" (change)="pickup($event)" style="display: none" accept=".pik, .csv"/>
               </span>
             </label>
+            <button ngbDropdownItem (click)="newWindow()" translate>Open a new Window</button>
           </div>
         </div>
       </li>
